2011-12-13  James Hunt  <james.hunt@ubuntu.com>

	* configure.ac: Bump version to 1.5
	* NEWS: Begin new release

2011-12-13  James Hunt  <james.hunt@ubuntu.com>

	* NEWS: Release 1.4
	* configure.ac (NIH_COPYRIGHT): Update

2011-12-12  James Hunt  <james.hunt@ubuntu.com>

	Simplify logfile name encoding.
	
	* init/job_process.c: job_process_log_path(): Ditch D-Bus job name
	  encoding in path names for saner approach that simply remaps slash
	  characters (minimal surprises for users).
	* init/job_process.h: Addition of macros:
	  - JOB_PROCESS_LOG_FILE_EXT
	  - JOB_PROCESS_LOG_REMAP_FROM_CHAR
	  - JOB_PROCESS_LOG_REMAP_TO_CHAR
	* init/man/init.5: Update console section for simplified log filename
	  encoding approach.
	* init/test_job_process.c: test_log_path(): Updates for simplified
	  logfile name encoding.
	* util/tests/test_user_sessions.sh: Updates for simplified
	  logfile name encoding: removed dbus_encode() and replaced with
	  upstart_encode().

2011-12-12  James Hunt  <james.hunt@ubuntu.com>

	* extra/man/upstart-udev-bridge.8:
	  - Added new '--no-strip' option.
	  - Added missing '--daemon', '--debug' and '--help' options.
	* extra/upstart-udev-bridge.c:
	  XXX: Behavioural change: non-printable bytes are now removed
	  by default from all udev message data to handle buggy
	  hardware devices which expose this data to userland (the
	  kernel simply passes it through verbatim). To revert to old
	  behaviour (where no udev message data is modified), specify
	  the new '--no-strip' option (LP: #829980).
	  - make_safe_string(): New function to cleanse udev data.
	  - udev_monitor_watcher():
	    - Cleanse udev data unless '--no-strip' specified.
	    - Fixed possible crash should 'action' not be set.
	    - Fixed possible crash should 'devname' not be set
	      and '--debug' specified.

2011-12-09  James Hunt  <james.hunt@ubuntu.com>

	* Merge of 'setuid' + 'setgid' stanzas from
	  Evan Broder (lp:~broder/upstart/drop-privileges).
